fix: title clipping issue

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@
 {
     position: absolute;
     z-index: 100;
+    top: calc(50% - 18vmin / 2);
     left: 0;
     width: 100%;
     color: #ffffff;
